--- a/app/src/main/res/layout/activity_get_ready.xml
+++ b/app/src/main/res/layout/activity_get_ready.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GetReadyTime">
+    tools:context=".getReady">
 
     <View
         android:id="@+id/view"
@@ -117,4 +117,5 @@
         app:layout_constraintHorizontal_bias="0.857"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
