--- a/app/src/main/res/layout/activity_transportation.xml
+++ b/app/src/main/res/layout/activity_transportation.xml
@@ -126,6 +126,7 @@
         android:layout_marginEnd="25dp"
         android:layout_marginRight="25dp"
         android:layout_marginBottom="16dp"
+        android:onClick="jumpToGetReady"
         android:text="Next"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
